fixing issues with the OneLakeExporer

--- a/Workload/app/items/OneLakeExplorerItem/OneLakeExplorerItem.scss
+++ b/Workload/app/items/OneLakeExplorerItem/OneLakeExplorerItem.scss
@@ -1,5 +1,10 @@
 /* OneLake Explorer Item Styles */
 
+/* Empty View */
+.itemEditorEmpty {
+  height: 100%;
+}
+
 /* Table Editor View */
 .table-editor-view {
   height: 100%;
