renaming to Fabric CLI

--- a/Workload/app/items/FabricCLIItem/FabricCLIItem.scss
+++ b/Workload/app/items/FabricCLIItem/FabricCLIItem.scss
@@ -1,6 +1,6 @@
 /* Spark Terminal Item Styles */
 
-.spark-terminal-editor {
+.fabric-cli-editor {
     height: 100%;
     display: flex;
     flex-direction: column;
