Fixing smaller issues on Starting session without Enviroment selected, moving between script and console and UX

--- a/Workload/app/items/FabricCLIItem/FabricCLIItem.scss
+++ b/Workload/app/items/FabricCLIItem/FabricCLIItem.scss
@@ -236,6 +236,10 @@
 .type-dropdown {
     min-width: auto;
     width: 100%;
+
+    & > button {
+        width: 100%;
+    }
 }
 
 .delete-button {
