renaming of FabricCLI to CloudShell

--- a/Workload/app/items/CloudShellItem/CloudShellItem.scss
+++ b/Workload/app/items/CloudShellItem/CloudShellItem.scss
@@ -1,6 +1,6 @@
 /* Spark Terminal Item Styles */
 
-.fabric-cli-editor {
+.cloud-shell-editor {
     height: 100%;
     display: flex;
     flex-direction: column;
